@@ -1,6 +1,7 @@
 from __future__ import absolute_import, unicode_literals
 
 from django.test import TestCase
+from django.test.utils import override_settings
 
 from wagtail.tests.testapp.models import EventPage, SimplePage
 from wagtail.wagtailadmin import widgets
@@ -79,4 +80,72 @@ class TestAdminPageChooserWidget(TestCase):
         js_init = widget.render_js_init('test-id', 'test', self.child_page)
         self.assertEqual(
             js_init, "createPageChooser(\"test-id\", [\"wagtailcore.page\"], %d, true);" % self.root_page.id
+        )
+
+
+class TestAdminDateInput(TestCase):
+
+    def test_render_js_init(self):
+        widget = widgets.AdminDateInput()
+
+        js_init = widget.render_js_init('test-id', 'test', None)
+
+        # we should see the JS initialiser code:
+        # initDateChooser("test-id", {"dayOfWeekStart": 0, "format": "Y-m-d"});
+        # except that we can't predict the order of the config options
+        self.assertIn('initDateChooser("test-id", {', js_init)
+        self.assertIn('"dayOfWeekStart": 0', js_init)
+        self.assertIn('"format": "Y-m-d"', js_init)
+
+    def test_render_js_init_with_format(self):
+        widget = widgets.AdminDateInput(format='%d.%m.%Y.')
+
+        js_init = widget.render_js_init('test-id', 'test', None)
+        self.assertIn(
+            '"format": "d.m.Y."',
+            js_init,
+        )
+
+    @override_settings(WAGTAIL_DATE_FORMAT='%d.%m.%Y.')
+    def test_render_js_init_with_format_from_settings(self):
+        widget = widgets.AdminDateInput()
+
+        js_init = widget.render_js_init('test-id', 'test', None)
+        self.assertIn(
+            '"format": "d.m.Y."',
+            js_init,
+        )
+
+
+class TestAdminDateTimeInput(TestCase):
+
+    def test_render_js_init(self):
+        widget = widgets.AdminDateTimeInput()
+
+        js_init = widget.render_js_init('test-id', 'test', None)
+
+        # we should see the JS initialiser code:
+        # initDateTimeChooser("test-id", {"dayOfWeekStart": 0, "format": "Y-m-d H:i"});
+        # except that we can't predict the order of the config options
+        self.assertIn('initDateTimeChooser("test-id", {', js_init)
+        self.assertIn('"dayOfWeekStart": 0', js_init)
+        self.assertIn('"format": "Y-m-d H:i"', js_init)
+
+    def test_render_js_init_with_format(self):
+        widget = widgets.AdminDateTimeInput(format='%d.%m.%Y. %H:%M')
+
+        js_init = widget.render_js_init('test-id', 'test', None)
+        self.assertIn(
+            '"format": "d.m.Y. H:i"',
+            js_init,
+        )
+
+    @override_settings(WAGTAIL_DATETIME_FORMAT='%d.%m.%Y. %H:%M')
+    def test_render_js_init_with_format_from_settings(self):
+        widget = widgets.AdminDateTimeInput()
+
+        js_init = widget.render_js_init('test-id', 'test', None)
+        self.assertIn(
+            '"format": "d.m.Y. H:i"',
+            js_init,
         )
